@@ -1,3 +1,4 @@
-EBUILD qutim-icq-0.2.9999.ebuild 910 RMD160 7ad560a3eb9e4080d9cb568886cd9eaf1ea39a67 SHA1 03f3d80e1a5df4191f2daf896be110162c09301c SHA256 702386884a552360e3944261579971b427b7f2d8dc57ea5299bec433733e6540
-MISC ChangeLog 272 RMD160 d685becbdacc0ced7d6c2a3d7abbe78205785019 SHA1 ff326c1a62af13e3a16091485a3ec6993b4109a2 SHA256 e6f3a0009eae960d51380e85b7f0753aca07397537596ed53f505de07ff98ae8
+EBUILD qutim-icq-0.2.9999.ebuild 939 RMD160 4e85af51dadd0962b5aabefffabc21b5e4d655be SHA1 87ab7f55e414daedec85ccac45ba6ee4fb8967bf SHA256 e193e7d363aa1d5e0e5fd8b8ff997ceb6bd9928889e1ab3e5c12153374de0765
+EBUILD qutim-icq-0.3.9999.ebuild 1008 RMD160 51b5286f89c25227f50043588d78df989a3ae60d SHA1 7d43a3f3e73e5f2b400a878412bb6bd46c5c6682 SHA256 219d2c4293956fa12a9cf284f743e5f647896519f1709ccb94591945638acdc7
+MISC ChangeLog 433 RMD160 099c48c94e2fbda57a13b7eec9a7ec6eeefebf20 SHA1 c1dcb768d7533509cde11bf2809b1d7e04711e33 SHA256 8f0246cfa75d962af1be6035c0a63b68269bbd1b69cc9055ee415ae9aa1d59bd
 MISC metadata.xml 242 RMD160 9c5b910c7c12c8a1ed8bd87a7ad0b9bcfc4733d4 SHA1 4c37aa691790a1b3c6ce27b54062f88f3243b1b7 SHA256 5cfd8583ff311843d5530c5a3d10fbe6c87b58b100697e505b3ac1838059755a
